# pytest-sentry

./: .craft.yml  .gitignore  .travis.yml  CONTRIBUTING.md  Makefile  README.md  README.rst  dev-requirements.txt  pytest.ini  pytest_sentry.py  setup.cfg  setup.py
.github/workflows/: main.yml  release.yml
pytest_sentry/: __init__.py  client.py  consts.py  fixtures.py  helpers.py  hooks.py  integration.py  pytest_hooks.py  pytest_integration.py
scripts/: bump-version.sh
tests/: conftest.py  test_basic.py  test_envvars.py  test_fixture.py  test_hub.py  test_retries.py  test_scope.py  test_skip.py  test_tracing.py
