[metadata]
name = pytest_sentry
version = 0.3.0rc1
description = A pytest plugin to send testrun information to Sentry.io
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/untitaker/pytest-sentry
author = Markus Unterwaditzer
author_email = markus@unterwaditzer.net
license = BSD-2-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License

[options]
py_modules = pytest_sentry
install_requires =
    pytest
    sentry-sdk>=2.0.0a1,<3
    wrapt

[options.entry_points]
pytest11 =
    sentry = pytest_sentry
