[metadata]
name = pytest_sentry
version = 0.5.1
description = A pytest plugin to send testrun information to Sentry.io
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/untitaker/pytest-sentry
author = Markus Unterwaditzer
author_email = markus@unterwaditzer.net
license = BSD-2-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License

[options]
packages = pytest_sentry
install_requires =
    pytest
    sentry-sdk>=3.0.0a1
    wrapt

[options.entry_points]
pytest11 =
    sentry = pytest_sentry
